--- a/index.html
+++ b/index.html
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Temperature Converter</title>
 </head>
+
 <body>
-    
+    <div class="container">
+        <div class="header">
+            <h1>Temperature Converter</h1>
+        </div>
+        <div class="input1">
+            <label for="input1">Enter temperature in CELSIUS:</label>
+            <input type="number" id="celsius" placeholder="Enter your temperature in celsius">
+        </div>
+        <div class="input2">
+            <label for="input2">Enter temperature in KELVIN:</label>
+            <input type="number" id="kelvin" placeholder="Enter your temperature in kelvin">
+        </div>
+        <div class="input3">
+            <label for="input3">Enter temperature in FAHRENHEIT:</label>
+            <input type="number" id="fahrenheit" placeholder="Enter your temperature in fahrenheit">
+        </div>
+    </div>
 
     <script src="app.js"></script>
 </body>
+
 </html>
